# job-market-data-pipeline

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sql/: create_tables.sql
src/cleaning/: clean_jobs.py
src/config/: schemas.py  settings.py
src/database/: database.py  insert_sample.py  models.py  read_jobs.py  repository.py  test_connection.py
src/pipeline/: pipeline.py
src/scraper/: client.py  extract.py  parser.py  scrape_jobs.py  test_extract.py
src/utils/: exceptions.py  logger.py
