[project]
name = "job-market-data-pipeline"
version = "0.1.0"
description = "Production-ready ETL pipeline for scraping and processing job market data."
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"